# sglang-omni

./: .buildinfo  .pre-commit-config.yaml  MOSS_TTS_REFERENCE_ENCODER_EXPERIMENT.md  MOSS_TTS_SMALL_SCOPE_COMPILE_EXPERIMENT.md  README.html  genindex.html  index.html  objects.inv  omni  omni-tts  pyproject.toml  search.html  searchindex.js
.claude/skills/running-eval-suite/: SKILL.md  runner.py
.claude/skills/tune-ci-thresholds/: SKILL.md  tail_calibration_pytest.sh  tune.py
.github/actions/omni-cleanup-host/: action.yaml
.github/actions/omni-post-stage/: action.yaml
.github/actions/omni-setup/: action.yaml
.github/scripts/: ci_env.sh  delete_gpu_process.sh  ensure_gpus_idle.sh  ensure_hf_models.sh  pr_ci_gate.py  prepare_omni_venv.sh  run_all_wer_ci_aligned.sh  validate_omni_ci_home.sh
.github/workflows/: omni-ci.yaml  test-asr-ci.yaml  test-qwen3-omni-ci.yaml  test-s2pro-ci.yaml  test-tts-ci.yaml  test.yaml
_sources/: index.rst
_sources/basic_usage/: omni_router.md  qwen3_omni.md  tts.md
_sources/cookbook/: fun_asr.md  qwen3_asr.md
_sources/developer_reference/: config.md
basic_usage/: higgs_tts.html  llada2_uni.html  mps_dp.html  omni_router.html  qwen3_omni.html  tts.html  tts_s2pro.html
benchmarks/: relay.html
benchmarks/benchmarker/: utils.py
benchmarks/eval/: benchmark_higgs_audio_cache.py  benchmark_moss_tts_encode_frame_compile.py  benchmark_moss_tts_reference_encoder_compile.py  benchmark_omni_seedtts.py  benchmark_tts_seedtts.py
benchmarks/eval/moss_tts_compile_server_configs/: README.md  compile_batch_encode_default.yaml  compile_batch_encode_fullgraph.yaml  compile_batch_encode_max_no_cg.yaml  compile_batch_encode_reduce_overhead.yaml  compile_off.yaml
benchmarks/metrics/: performance.py
benchmarks/tasks/: tts.py
calibration/: 20260531T064003Z-tts-report.html
cookbook/: fishaudio_s2_pro.html  fun_asr.html  higgs_tts.html  llada2_uni.html  ming_omni.html  ming_tts.html  moss_transcribe_diarize.html  moss_tts.html  moss_tts_local.html  qwen3_asr.html  qwen3_omni.html  qwen3_tts.html  voxtral_tts.html  whisper_asr.html
design/: gpu_radix_hash.html  refactor_rfc.html
developer_reference/: apiserver_design.html  architecture.html  communication.html  config.html  main.html  pipeline.html  profiler.html  reference_encode_service.html  relay_design.html  rl_admin_control.html  tts_model_integration.html
docs/cookbook/: higgs_tts.md
examples/: run_ming_omni_server.py  run_qwen3_omni_speech_server.py
examples/configs/: higgs_tts_cg_off.yaml  qwen3_omni_mmmu.yaml  qwen3_tts_0_6b_customvoice.yaml  qwen3_tts_1_7b_voicedesign.yaml  s2pro_tts_compile.yaml  s2pro_tts_full_compile.yaml
get_started/: apiserver_quickstart.html  installation.html
scripts/: gate_s0_sync_parity.py
sglang_omni/cli/: serve.py
sglang_omni/client/: client.py
sglang_omni/config/: schema.py
sglang_omni/model_runner/: model_worker.py  sglang_model_runner.py
sglang_omni/models/fishaudio_s2_pro/: sglang_model.py  stages.py
sglang_omni/models/higgs_tts/: config.py  stages.py
sglang_omni/models/ming_omni/: config.py  stages.py
sglang_omni/models/moss_transcribe_diarize/: __init__.py  config.py  hf_config.py  request_builders.py  sglang_model.py  stages.py
sglang_omni/models/moss_tts/: config.py  model_runner.py  (+3 more)
sglang_omni/pipeline/: tp_control.py
sglang_omni/scheduling/: omni_scheduler.py  simple_scheduler.py  threaded_simple_scheduler.py
sglang_omni/serve/: launcher.py  openai_api.py  protocol.py
sglang_omni/utils/: __init__.py  compiled_stage.py  lru_cache.py
sglang_omni_router/: app.py  route_metadata.py
tests/: README.md  utils.py
tests/test_model/: conftest.py  omni_router_utils.py  omni_whisper_wer_utils.py  test_qwen3_omni_mmmu_ci.py  test_qwen3_omni_mmmu_talker_ci.py  test_qwen3_omni_mmsu_ci.py  test_qwen3_omni_mmsu_talker_ci.py  test_qwen3_omni_tts_ci.py  test_qwen3_omni_videoamme_ci.py  test_qwen3_omni_videoamme_talker_ci.py  test_qwen3_omni_videoamme_talker_tp2_ci.py  test_qwen3_omni_videomme_ci.py  test_qwen3_omni_videomme_talker_ci.py  test_tts_ci.py  test_tts_consistency_artifacts.py  test_whisper_asr_ci.py
(+69 files in other folders)
